<resources>
    <string name="app_name">CleanArchitecture</string>
    <string name="get_data">GET USER DATA</string>
    <string name="save_data">SAVE USER DATA</string>
    <string name="put_first_name">Put firstname</string>
    <string name="put_last_name">Put firstname</string>
    <string name="no_first_name">No firstname</string>
    <string name="no_last_name">No lastname</string>
</resources>