<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">


    <LinearLayout
        android:id="@+id/linerLText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewFirstName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50"
            android:layout_margin="@dimen/_8"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_first_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewLastName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50"
            android:layout_margin="@dimen/_8"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_last_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonGetUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8"
        android:text="@string/get_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linerLText" />

    <LinearLayout
        android:id="@+id/linerLEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonGetUser">

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50"
            android:layout_margin="@dimen/_8"
            android:layout_weight="1"
            android:autofillHints="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/put_first_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50"
            android:layout_margin="@dimen/_8"
            android:layout_weight="1"
            android:autofillHints="true"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/put_last_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSaveUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8"
        android:text="@string/save_data"
        app:layout_constraintTop_toBottomOf="@id/linerLEditText" />

    <TextView
        android:id="@+id/saveResult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50"
        android:layout_margin="@dimen/_8"
        android:layout_weight="1"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>